--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: swift
 osx_image: xcode9
 xcode_sdk: iphonesimulator11.0
 script:
-    - xcodebuild -scheme JWT -project JWT.xcodeproj -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 6S,OS=11.0' build test
+    - xcodebuild -scheme JWTWrapper -project JWTWrapper.xcodeproj -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 6S,OS=11.0' build test
 after_success:
-    - bash <(curl -s https://codecov.io/bash) -J 'JWT'
+    - bash <(curl -s https://codecov.io/bash) -J 'JWTWrapper'
